--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "roz iz a complianze bot",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "bundle": "parcel build ./index.js --target node --global handler --bundle-node-modules --no-source-maps --no-minify --out-dir . --out-file lambda.js",
-    "deploy": "cd deployment; terraform apply --auto-approve"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
